OpenAIMicroservice/openshift/assets/microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai-microservice-deployment
  namespace: bramterlouw-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      name: openai-microservice-deployment
      app: openai-microservice-app
      project: language-fitness
  template:
    metadata:
      labels:
        name: openai-microservice-deployment
        app: openai-microservice-app
        project: language-fitness
    spec:
      containers:
        - name: openai-microservice
          image: microservice_image
          ports:
            - containerPort: 4000
          readinessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 3
            httpGet:
              path: "/health/ready"
              port: 4000
          livenessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 30
            httpGet:
              path: "/health/live"
              port: 4000
---
kind: Service
apiVersion: v1
metadata:
  name: openai-microservice-service
  namespace: bramterlouw-dev
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: openai-microservice-service
    app: openai-microservice-app
    project: language-fitness
spec:
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  selector:
    name: openai-microservice-deployment
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openai-microservice-route
  namespace: bramterlouw-dev
  labels:
    name: openai-microservice-route
    app: openai-microservice-app
    project: language-fitness
spec:
  port:
    targetPort: 4000
  to:
    kind: Service
    name: openai-microservice-service
